--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 					</span>
 				</div>
 				<div id="b2upg8" class="upgradeBox" style="left:310px; top:220px" onClick="buy2Upgrade(7)">
-					<span class="tooltipRight"><span class="upgTitle">Fiery Spades</span></br>Reduces the number of ticks for Ice Cubes to melt by 30
+					<span class="tooltipRight"><span class="upgTitle">Fiery Spades</span></br>Digs have a 5% chance to reduce the remaining ticks on Ice Cubes by 1
 					</span>
 				</div>
 				<div id="b2upg9" class="upgradeBox" style="left:420px; top:270px" onClick="buy2Upgrade(8)">
@@ -394,7 +394,7 @@
 					</span>
 				</div>
 				<div id="b3upg9" class="upgradeBox" style="left:440px; top:280px" onClick="buy3Upgrade(8)">
-					<span class="tooltipLeft"><span class="upgTitle">Heating up the Competition</span></br>Reduces the number of ticks for Ice Cubes to melt by 10 
+					<span class="tooltipLeft"><span class="upgTitle">Heating up the Competition</span></br>BINGOs have a 5% chance to reduce the remaining time on Ice Cubes by 1
 					</span>
 				</div>
 				<div id="b3upg10" class="upgradeBox" style="left:450px; top:420px" onClick="buy3Upgrade(9)">
