--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 					</span>
 				</div>
 				<div id="b3upg9" class="upgradeBox" style="left:440px; top:280px" onClick="buy3Upgrade(8)">
-					<span class="tooltipLeft"><span class="upgTitle">Heating up the Competition</span></br>BINGOs have a 7% chance to reduce the remaining time on Ice Cubes by 1
+					<span class="tooltipLeft"><span class="upgTitle">Heating up the Competition</span></br>BINGOs have a 5% chance to reduce the remaining time on Ice Cubes by 1
 					</span>
 				</div>
 				<div id="b3upg10" class="upgradeBox" style="left:450px; top:420px" onClick="buy3Upgrade(9)">
@@ -437,7 +437,7 @@
 					</span>
 				</div>
 				<div id="b4upg2" class="upgradeBox" style="left:170px; top:140px" onClick="buy4Upgrade(1)">
-					<span class="tooltipRight"><span class="upgTitle">Engage Thrusters</span></br>Reduces the number of ticks for Ice Cubes to melt by 20
+					<span class="tooltipRight"><span class="upgTitle">Engage Thrusters</span></br>Reduces the number of ticks for Ice Cubes to melt by 15
 					</span>
 				</div>
 				<div id="b4upg3" class="upgradeBox" style="left:100px; top:230px" onClick="buy4Upgrade(2)">
@@ -449,11 +449,11 @@
 					</span>
 				</div>
 				<div id="b4upg5" class="upgradeBox" style="left:170px; top:450px" onClick="buy4Upgrade(4)">
-					<span class="tooltipRight"><span class="upgTitle">Lift Off</span></br>Every 50 ticks Spaceships give <span id="overdriveValue"></span>% increased production for 10 ticks. (Based on amount of Spaceships owned)
+					<span class="tooltipRight"><span class="upgTitle">Lift Off</span></br>Every 40 ticks Spaceships give <span id="overdriveValue"></span>% increased production for 10 ticks. (Based on amount of Spaceships owned)
 					</span>
 				</div>
 				<div id="b4upg6" class="upgradeBox" style="left:160px; top:570px" onClick="buy4Upgrade(5)">
-					<span class="tooltipRight"><span class="upgTitle">Challenger</span></br>Reduces the number of ticks for Lift Off by 10
+					<span class="tooltipRight"><span class="upgTitle">Challenger</span></br>Ice Cubes have a 25% chance to reduce their remaining tick duration by 1 during Lift Off
 					</span>
 				</div>
 				<div id="b4upg7" class="upgradeBox" style="left:360px; top:140px" onClick="buy4Upgrade(6)">
