--- a/index.html
+++ b/index.html
@@ -760,11 +760,11 @@
 					</span>
 				</div>
 				<div id="b8upg10" class="upgradeBox" style="left:400px; top:270px" onClick="buy8Upgrade(9)">
-					<span class="tooltipLeft"><span class="upgTitle">Garbage Bag Sack Races</span></br>Multiples of 3 Garbage cause every 5 ticks to perform an extra tick
+					<span class="tooltipLeft"><span class="upgTitle">Garbage Bag Sack Races</span></br>Multiples of 3 Garbage cause every 3 ticks to perform an extra tick
 					</span>
 				</div>
 				<div id="b8upg11" class="upgradeBox" style="left:410px; top:140px" onClick="buy8Upgrade(10)">
-					<span class="tooltipLeft"><span class="upgTitle">Is Another Man's Treasure</span></br>Multiples of 5 Garbage Produce 7x the base gain of garbage
+					<span class="tooltipLeft"><span class="upgTitle">Is Another Man's Treasure</span></br>Multiples of 5 Garbage Produce 7x the current gain of garbage
 					</span>
 				</div>
 				
