--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 					</span>
 				</div>
 				<div id="b4upg9" class="upgradeBox" style="left:380px; top:370px" onClick="buy4Upgrade(8)">
-					<span class="tooltipLeft"><span class="upgTitle">Lighter Material</span></br>Reduces the base cost of Spaceships by 500
+					<span class="tooltipLeft"><span class="upgTitle">Lighter Material</span></br>Reduces the base cost of Spaceships by 5%
 					</span>
 				</div>
 				<div id="b4upg10" class="upgradeBox" style="left:320px; top:470px" onClick="buy4Upgrade(9)">
