--- a/index.html
+++ b/index.html
@@ -123,6 +123,30 @@
 					</span>
 				</div>
 			</div>
+			<div id="building8" style="display:none">
+				<div class="buyable" style="background-image:url('art/build9.png');" id="buy9" border="1" onclick="pickBuy(9)">
+				</div>
+				<div id="bgBuilding9" class="building"><span id="name9"></span><br>Currently owned: <span id="owned9"></span><br>Cost: $<span id="cost9"></span>
+					<span class="tooltiptext">Stinky smelly garbage. Different amounts of garbage produce different effects. When at an odd number of garbage they have a chance to give ♠. When at an even number, Time Warp is active and tick rate is greatly increased. Each gives $<span id="give9Txt"></span> a tick for a total of $<span id="total9Txt"></span> each tick. Buying one now has a worth of <span id="ratio9Txt"></span>
+					</span>
+				</div>
+			</div>
+			<div id="building9" style="display:none">
+				<div class="buyable" style="background-image:url('art/build10.png');" id="buy10" border="1" onclick="pickBuy(10)">
+				</div>
+				<div id="bgBuilding10" class="building"><span id="name10"></span><br>Currently owned: <span id="owned10"></span><br>Cost: $<span id="cost10"></span>
+					<span class="tooltiptext">Stinky smelly garbage. Different amounts of garbage produce different effects. When at an odd number of garbage they have a chance to give ♠. When at an even number, Time Warp is active and tick rate is greatly increased. Each gives $<span id="give10Txt"></span> a tick for a total of $<span id="total10Txt"></span> each tick. Buying one now has a worth of <span id="ratio10Txt"></span>
+					</span>
+				</div>
+			</div>
+			<div id="building10" style="display:none">
+				<div class="buyable" style="background-image:url('art/build11.png');" id="buy11" border="1" onclick="pickBuy(11)">
+				</div>
+				<div id="bgBuilding11" class="building"><span id="name11"></span><br>Currently owned: <span id="owned11"></span><br>Cost: $<span id="cost11"></span>
+					<span class="tooltiptext">Stinky smelly garbage. Different amounts of garbage produce different effects. When at an odd number of garbage they have a chance to give ♠. When at an even number, Time Warp is active and tick rate is greatly increased. Each gives $<span id="give11Txt"></span> a tick for a total of $<span id="total11Txt"></span> each tick. Buying one now has a worth of <span id="ratio11Txt"></span>
+					</span>
+				</div>
+			</div>
 		</div>
 		
 		<div style="position:absolute;left:70%;top:0;display:none" id="upgBox">
