--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<button style="position:absolute;top:0;left:25%" onClick="cycleBuy()">Buy <span id="buyAmount">1</span></button>
 		<div id="infiniteDump" class="infiniteDumpBtn" onclick="dumpInfinite()">
 			<span class="tooltiptext">
-				Sacrifice all of your ∞ to gain double $, φ, ☺, and ♠. This effect lasts for <span id="infiniteDuration"></span> ticks. (Increased by more ∞)
+				Sacrifice all of your ∞ to gain x4 $, φ, ☺, and ♠. This effect lasts for <span id="infiniteDuration"></span> ticks. (Increased by more ∞)
 			</span>
 		</div>
 		<div style="position:absolute;top:97%;left:0%" id="alert"></div>
