--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 				</div>
 			</div>
 			<div class="manaTank" style="left:92%;" id="manaTank3">
-				<div class="tooltiptext">Your Moana pool is <span id="mana3Percent">0</span>% full. You have sacrificed a total of $<span id="mana3Dump">0</span> for this cause
+				<div class="tooltiptext">Your Moana pool is <span id="mana3Percent">0</span>% full. You have sacrificed a total of $<span id="mana3Dump">0</span> for this cause. You need $<span id="mana3DumpRemain">0</span> more to fill it up.
 				</div>
 				<div class="manaBarBackground3"></div>
 				<div class="manaBar" id="manaBar3"></div>
