--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		function play(){
 			if(score >= 100)
 				winGame();
+			score = 0;
 			var scoreBoard = document.getElementById("score");
 			if(oldScore == score)
 				score = 0;
